# mission-control

./: .gitignore  Cargo.toml  DESIGN.md  KNOWN_GAPS.md  MISSION_CONTROL_PRD.md  PRD_SESSION_POLLING.md  README.md
mc/: Cargo.toml
mc-core/: Cargo.toml
mc-core/src/: config.rs  lib.rs  reducer.rs  state.rs
mc-core/src/collector/: herdr.rs  mod.rs  pi.rs  project.rs
mc-core/src/transport/: mod.rs  unix_socket.rs
mc-schema/: Cargo.toml
mc-schema/src/: events.rs  lib.rs  pane_view.rs  project.rs  raw_signals.rs
mc-web/: index.html
mc/src/: daemon.rs  diagnose.rs  main.rs  status.rs  tui.rs  web.rs
openwiki/: .last-update.json  index.md  quickstart.md
openwiki/architecture/: index.md  overview.md
openwiki/domain/: index.md  pane-view.md
