[package]
name = "mc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mission Control core library — collectors, reducer, state store, event hub"

[dependencies]
mc-schema = { path = "../mc-schema" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"
chrono = "0.4"
notify = "7"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dirs = "6"
tracing = "0.1"
thiserror = "2"