[package]
name = "mc-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mission Control schema types — the frozen keel. Depends on nothing."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["chrono04", "uuid1"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"