[package]
name = "mc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mission Control — birds-eye view over coding-agent panes"

[[bin]]
name = "mc"
path = "src/main.rs"

[dependencies]
mc-core = { path = "../mc-core" }
mc-schema = { path = "../mc-schema" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"