[package]
name = "mc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mission Control — birds-eye view over coding-agent panes"

[[bin]]
name = "mc"
path = "src/main.rs"

[dependencies]
mc-core = { path = "../mc-core" }
mc-schema = { path = "../mc-schema" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
async-stream = "0.3"
tokio-stream = "0.1"